--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.16.3",
+    "express-favicon": "^2.0.1",
+    "path": "^0.12.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-highcharts": "^16.0.2",
+    "react-highstock": "^1.0.2",
     "react-scripts": "2.0.4"
   },
   "scripts": {
